tests/errors/malformed-interval.expect
---CODE---
1
---STDERR---
Error: Filament Parser:  --> 1:22
  |
1 | comp Main<G: 1>(@[G, 3] go: 1) -> () {}
  |                      ^
  |
  = Time expressions must have the form `E+n' where `E' is an event and `n' is a concrete number: 
Compilation failed with 1 errors.
